# R-Type-Networked

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  install.bat  install.sh  vcpkg.json  windows.dockerfile
.github/workflows/: cmake-multi-platform.yml  docker-image.yml
ECS/: Entity.hpp  Registry.hpp  SparseArray.hpp
ECS/Components/: Button.hpp  ChatBox.hpp  Collider.hpp  Controllable.hpp  Damaging.hpp  Destroyable.hpp  HealthBar.hpp  MovementPattern.hpp  Pickup.hpp  Position.hpp  Scale.hpp  Score.hpp  Sprite.hpp  Tag.hpp  Texture.hpp
ECS/Systems/: ButtonSystem.hpp  ChatBoxSystem.hpp  ColliderSystem.hpp  DamageSystem.hpp  DrawSystem.hpp  GameSystem.hpp  HealthBarSystem.hpp  ISystem.hpp  InputSystem.hpp  PositionSystem.hpp  Position_System.hpp  SpriteSystem.hpp  TextureSystem.hpp  WaveSystem.hpp
ECS/Systems/Both/: HealthSystem.hpp
ECS/Systems/Client/: CollidingSystem.hpp  DamageSystem.hpp  GameSystem.hpp  InputSystem.hpp  PositionSystem.hpp  TextureSystem.hpp
ECS/Systems/Server/: BonusSystem.hpp  DamageSystem.hpp  HealthSystem.hpp  NetworkSystem.hpp  PositionSystem.hpp  WaveSystem.hpp
Release/: client.cfg  server.cfg
includes/: CFGParser.hpp  Error.hpp  Logs.hpp  Packets.hpp  Protocol.hpp  Uuid.hpp  ZLib.hpp
resources/: client.cfg
srcs/Client/: CMakeLists.txt
srcs/Client/include/: Animation.hpp  Assets.hpp  Background.hpp  CLock.hpp  Client.hpp  EndMenu.hpp  Entity.hpp  Game.hpp  MainMenu.hpp  Network.hpp  Player.hpp  Screen.hpp
srcs/Client/src/: Background.cpp  EndMenu.cpp  Main.cpp  MainMenu.cpp  Player.cpp  Screen.cpp
srcs/Engine/: CMakeLists.txt
srcs/Engine/include/: Engine.hpp
srcs/Engine/src/: Engine.cpp
srcs/Netcode/: Netcode.hpp
srcs/Runner/: CMakeLists.txt
srcs/Runner/src/: Main.cpp
srcs/Server/: CMakeLists.txt
srcs/Server/include/: Engine.hpp  Game.hpp  Network.hpp  Room.hpp  Server.hpp
srcs/Server/include/ECS/: ActiveBonus.hpp  Component.hpp  Damage.hpp  Damaging.hpp  Destroyable.hpp  Entity.hpp  Health.hpp  Hitbox.hpp  MovementPattern.hpp  Pickup.hpp  Position.hpp  Registry.hpp  SparseArray.hpp  System.hpp  Text.hpp  Texture.hpp
srcs/Server/include/ECS/Components/: ActiveBonus.hpp  Audio.hpp  Controllable.hpp  Damaging.hpp  Destroyable.hpp  Hitbox.hpp  MovementPattern.hpp  Pickup.hpp  Text.hpp  Texture.hpp  Velocity.hpp
srcs/Server/include/ECS/Systems/: BonusSystem.hpp  DamageSystem.hpp  PositionSystem.hpp
srcs/Server/include/ECS/Systems/Server/: DamageSystem.hpp
srcs/Server/include/Server/: Game.hpp
srcs/Server/src/: Main.cpp  Network.cpp
srcs/Server/src/ECS/: Registry.cpp
srcs/Server/src/Server/: Main.cpp
